--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Book Library</title>
+    <title>Task Library</title>
     <script src="/js/jquery-3.4.0.min.js"></script>
     <script src="/js/main.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
@@ -10,23 +10,23 @@
 <body>
     <div id="task-form">
         <form>
-            <h2>Добавление книги</h2>
-            <label>Название книги:</label>
+            <h2>Add a task:</h2>
+            <label>Task name:</label>
             <input type="text" name="name" value="">
-            <label>Год выпуска:</label>
+            <label>Time:</label>
             <input type="text" name="year" value="">
             <hr>
-            <button id="save-task">Сохранить</button>
+            <button id="save-task">Save task</button>
         </form>
     </div>
-    <h1>Библиотека (<span th:text="${booksCount}">0</span>)</h1>
-    <button id="show-add-task-form">Добавить книгу</button>
+    <h1>TaskLib (<span th:text="${tasksCount}">0</span>)</h1>
+    <button id="show-add-task-form">Add task</button>
     <br><br>
     <div id="task-list">
         <div th:each="task : ${tasks}">
             <a href="#" class="task-link" th:attr="data-id=${task.id}" th:text="${task.name}"></a>
         </div>
     </div>
-    <p th:text="${someParameter}"></p>
+   <p th:text="${someParameter}"></p>
 </body>
 </html>
